--- a/LearnOpenGL/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL/LearnOpenGL.vcxproj
@@ -78,8 +78,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\OpenGL\ThirdPartyLibs\Includes;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\OpenGL\ThirdPartyLibs\Libs;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Shalia\source\repos\LearnOpenGL\OpenGL\ThirdPartyLibs\Includes;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Shalia\source\repos\LearnOpenGL\OpenGL\ThirdPartyLibs\Libs;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
