--- a/LearnOpenGL/LearnOpenGL/LearnOpenGL.vcxproj.filters
+++ b/LearnOpenGL/LearnOpenGL/LearnOpenGL.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="stb_image.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="simple_fragment_00.fs">
@@ -32,10 +35,30 @@
     <None Include="simple_fragment_01.fs">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="textured_rectangle_00.fs">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="textured_rectangle_00.vs">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="shader_s.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Resources\Textures\judge_judy.jpg">
+      <Filter>Source Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\wall.jpg">
+      <Filter>Source Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\awesomeface.png">
+      <Filter>Source Files</Filter>
+    </Image>
+    <Image Include="Resources\Textures\container.jpg">
+      <Filter>Source Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
