--- a/LearnOpenGL/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL/LearnOpenGL.vcxproj
@@ -147,6 +147,10 @@
     <ClCompile Include="stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="cube_color.fs" />
+    <None Include="cube_color.vs" />
+    <None Include="light_color.fs" />
+    <None Include="light_color.vs" />
     <None Include="simple_fragment_00.fs" />
     <None Include="simple_fragment_01.fs" />
     <None Include="simple_vertex.vs" />
